[gd_scene load_steps=4 format=3 uid="uid://bvbl05i2y2kuo"]

[ext_resource type="Texture2D" uid="uid://bo884slbcm4bb" path="res://assets/main_menu.png" id="1_qelo2"]
[ext_resource type="Script" path="res://scripts/main_menu_buttons.gd" id="1_uhbm7"]
[ext_resource type="Theme" uid="uid://d10hqjyhkv815" path="res://theme/main_menu.tres" id="2_yfalp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhbm7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qelo2")
expand_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yfalp")
theme_type_variation = &"Start"
theme_override_font_sizes/font_size = 100
text = "Start"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yfalp")
text = "Options"

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yfalp")
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="DebugContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/DebugContainer"]
layout_mode = 2
text = "Debug:"

[node name="GalaxyButton" type="Button" parent="CenterContainer/VBoxContainer/DebugContainer"]
layout_mode = 2
text = "Galaxy Map"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/DebugContainer/GalaxyButton" to="." method="_on_galaxy_button_pressed"]
